--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Swagger UI</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/api-docs/swagger-ui.css" >
-    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="{{ROUTE}}/swagger-ui.css" >
+    <link rel="icon" type="image/png" href="{{ROUTE}}/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ROUTE}}/favicon-16x16.png" sizes="16x16" />
     <style>
       html
       {
@@ -34,14 +34,14 @@
   <body>
     <div id="swagger-ui"></div>
 
-    <script src="/api-docs/swagger-ui-bundle.js"> </script>
-    <script src="/api-docs/swagger-ui-standalone-preset.js"> </script>
+    <script src="{{ROUTE}}/swagger-ui-bundle.js"> </script>
+    <script src="{{ROUTE}}/swagger-ui-standalone-preset.js"> </script>
     <script>
     window.onload = function() {
 
       // Build a system
       const ui = SwaggerUIBundle({
-        url: "/api-docs.json",
+        url: "{{DOCS}}",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
