--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ROUTE}}/swagger-ui.css" >
-    <link rel="icon" type="image/png" href="{{ROUTE}}/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{{ROUTE}}/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
     <style>
       html
       {
@@ -34,14 +33,13 @@
   <body>
     <div id="swagger-ui"></div>
 
-    <script src="{{ROUTE}}/swagger-ui-bundle.js"> </script>
-    <script src="{{ROUTE}}/swagger-ui-standalone-preset.js"> </script>
+    <script src="./swagger-ui-bundle.js"> </script>
+    <script src="./swagger-ui-standalone-preset.js"> </script>
     <script>
     window.onload = function() {
-
-      // Build a system
+      // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "{{DOCS}}",
+        url: "https://petstore.swagger.io/v2/swagger.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
@@ -53,6 +51,7 @@
         ],
         layout: "StandaloneLayout"
       })
+      // End Swagger UI call region
 
       window.ui = ui
     }
